feat: toList()를 사용하여 코드 개선(#10)